# simple_graph_tool_xdf

./: .gitignore  README.md  pyproject.toml  reconnect_test.xdf
Reports/: reportPendulum.tex
Reports/Dioda/: dioda.tex
Reports/Generator/: generator.tex
Reports/Ogniskowa/: ogniskowa.tex
Reports/Template/: template.tex
Reports/TermOpor/: termopor.tex
Reports/Termopara/: reportTermopara.tex
Reports/Wzmacniacz/: analiza_wyniki.txt  wzmacniacz.tex
Reports/sily_sprezyste/: sily_sprezyste.tex
data/: 1min_3polar.xdf  Dane.xlsx  Generator.xlsx  Pendulum.xlsx  TermOpor.xlsx  Termopara.xlsx  Wzmacniacz.xlsx  focal-length.xlsx  long.xdf  misa1test.xdf  misa2test.xdf  misa3test.xdf  misa4test.xdf  msia.xdf  sily_sprezyste.xlsx
src/eeg/: Pendulum.py  __init__.py  diody.py  focal_len.py  generator.py  main.py  sily_sprezyste.py  termopara.py  termopor.py  wzmacniacz.py  wzmacniacz_clean.py  wzmacniacz_improved.py
