[project]
name = "eeg"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pyxdf>=1.16.8",
    "matplotlib>=3.9.2",
    "pyqt6>=6.7.1",
    "numpy>=1.21.2",
    "scipy>=1.7.3",
    "pandas>=1.3.3",
    "scikit-learn>=1.0.1",
    "openpyxl>=3.0.9",
    "pyedflib>=0.1.23",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eeg"]
